--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -30,8 +30,9 @@
     </button>
 
     <span class="spacer"></span>
+    <span>{{user?.email}}</span>
 
-    <button mat-button>
+    <button mat-button (click)="onLogout()">
       Logout
     </button>
 
